--- a/solutions/day1.ipynb
+++ b/solutions/day1.ipynb
@@ -104,9 +104,9 @@
     "        current_val = self.starting_point\n",
     "        for instruction in self.instructions:\n",
     "            if instruction[0] == 'L':\n",
-    "                new_val = current_val - instruction[1:]\n",
+    "                new_val = current_val - int(instruction[1:])\n",
     "            else:\n",
-    "                new_val = current_val + instruction[1:]\n",
+    "                new_val = current_val + int(instruction[1:])\n",
     "            current_val = new_val%100\n",
     "            if current_val == 0:\n",
     "                zeros += 1\n",
@@ -120,9 +120,9 @@
     "        current_val = self.starting_point\n",
     "        for instruction in self.instructions:\n",
     "            if instruction[0] == 'L':\n",
-    "                new_val = current_val - instruction[1:]\n",
+    "                new_val = current_val - int(instruction[1:])\n",
     "            else:\n",
-    "                new_val = current_val + instruction[1:]\n",
+    "                new_val = current_val + int(instruction[1:])\n",
     "            #if new_val is negative and current_val isn't, we must have passed 0; then\n",
     "            #integer divide by 100 to count the number of full revolutions we've done.\n",
     "            zeros += (new_val<=0 and current_val>0) + abs(new_val)//100\n",
