Full day 2 solution

--- a/solutions/day2.ipynb
+++ b/solutions/day2.ipynb
@@ -54,48 +54,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "54904ca4",
+   "execution_count": 19,
+   "id": "970d52c4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../data/day2.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../data/day2.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m input_fle:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m input_fle\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28minput\u001b[39m \u001b[38;5;241m=\u001b[39m [input_range\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m input_range \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m)]\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/day2.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open('../data/day2.txt', 'r') as input_fle:\n",
-    "    input = input_fle.readlines()\n",
-    "    input = [input_range.split('-') for input_range in input.split(',')]"
+    "from typing import Callable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
+   "id": "54904ca4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_ranges(input_line: str):\n",
+    "    input = [input_range.split('-') for input_range in input_line.split(',')]\n",
+    "    input_ranges = []\n",
+    "    for input_range in input:\n",
+    "        input_ranges.append([int(num) for num in input_range])\n",
+    "    return input_ranges\n",
+    "\n",
+    "with open('../data/day2.txt', 'r') as input_fle:\n",
+    "    input = parse_ranges(input_fle.readline())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "748acbf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_ranges = parse_ranges(\n",
+    "    '11-22,95-115,998-1012,1188511880-1188511890,222220-222224,1698522-1698528,446443-446449,38593856-38593862,565653-565659,824824821-824824827,2121212118-2121212124'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "472ef49b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IDValidator:\n",
+    "    ranges: str\n",
+    "    rule: Callable\n",
+    "\n",
+    "    def __init__(self, ranges, rule = lambda x: len(x)%2 == 0 and x[:len(x)//2] == x[len(x)//2:]):\n",
+    "        self.ranges = ranges\n",
+    "        self.rule = rule\n",
+    "\n",
+    "    def find_invalid_ids(self):\n",
+    "        invalid_ids = [\n",
+    "            id for interval in self.ranges for id in range(interval[0], interval[1]+1)\n",
+    "                if self.rule(str(id))\n",
+    "        ]\n",
+    "        return invalid_ids\n",
+    "    \n",
+    "    def find_invalid_sum(self):\n",
+    "        return sum(self.find_invalid_ids())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5bc53a55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<bound method Kernel.raw_input of <ipykernel.ipkernel.IPythonKernel object at 0x000001B2C50702F0>>"
+       "1227775554"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input"
+    "test = IDValidator(test_ranges)\n",
+    "test.find_invalid_sum()\n",
+    "# 1227775554\n",
+    "# success!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbcb3775",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23701357374"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validator = IDValidator(input)\n",
+    "validator.find_invalid_sum()\n",
+    "# 23701357374\n",
+    "# success!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "956f9d72",
+   "metadata": {},
+   "source": [
+    "# Puzzle 2\n",
+    "--- Part Two ---\n",
+    "\n",
+    "The clerk quickly discovers that there are still invalid IDs in the ranges in your list. Maybe the young Elf was doing other silly patterns as well?\n",
+    "\n",
+    "Now, an ID is invalid if it is made only of some sequence of digits repeated at least twice. So, 12341234 (1234 two times), 123123123 (123 three times), 1212121212 (12 five times), and 1111111 (1 seven times) are all invalid IDs.\n",
+    "\n",
+    "From the same example as before:\n",
+    "\n",
+    "    11-22 still has two invalid IDs, 11 and 22.\n",
+    "    95-115 now has two invalid IDs, 99 and 111.\n",
+    "    998-1012 now has two invalid IDs, 999 and 1010.\n",
+    "    1188511880-1188511890 still has one invalid ID, 1188511885.\n",
+    "    222220-222224 still has one invalid ID, 222222.\n",
+    "    1698522-1698528 still contains no invalid IDs.\n",
+    "    446443-446449 still has one invalid ID, 446446.\n",
+    "    38593856-38593862 still has one invalid ID, 38593859.\n",
+    "    565653-565659 now has one invalid ID, 565656.\n",
+    "    824824821-824824827 now has one invalid ID, 824824824.\n",
+    "    2121212118-2121212124 now has one invalid ID, 2121212121.\n",
+    "\n",
+    "Adding up all the invalid IDs in this example produces 4174379265.\n",
+    "\n",
+    "What do you get if you add up all of the invalid IDs using these new rules?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "a89ac8bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All we have to do is define a new callable to pass to IDValidator representing the new rule.\n",
+    "def new_rule(id: str):\n",
+    "    for ptr in range(1,len(id)//2+1):\n",
+    "        substr = id[:ptr]\n",
+    "        #If the string consists entirely of repetitions of this substring, splitting by it will yield a list of empty strings.\n",
+    "        #String splitting is efficient in Python, so while hacky I think this is fine.\n",
+    "        if len(''.join(id.split(substr))) == 0:\n",
+    "            return True\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "b025581e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4174379265"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_new_rule = IDValidator(test_ranges, rule = new_rule)\n",
+    "test_new_rule.find_invalid_sum()\n",
+    "# 4174379265\n",
+    "# success!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5049cf59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34284458938"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validator_new_rule = IDValidator(input, rule = new_rule)\n",
+    "validator_new_rule.find_invalid_sum()\n",
+    "# 34284458938\n",
+    "# success!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "3b6c7d30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# More efficient\n",
+    "def new_rule_v2(id: str):\n",
+    "    if not id:\n",
+    "        return False\n",
+    "    return id in (id + id)[1:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "2c0927d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34284458938"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validator_new_rule_v2 = IDValidator(input, rule = new_rule_v2)\n",
+    "validator_new_rule_v2.find_invalid_sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46984c8d",
+   "metadata": {},
+   "source": [
+    "# Reflection\n",
+    "\n",
+    "Much easier than day 1, to me, or maybe I'm warmed up now. \n",
+    "\n",
+    "My secret challenge in doing these is to write a solution for Puzzle 1 that will also solve Puzzle 2 with minimal modifications. Today I was successful at predicting the flexibility required for part 2: changing the rule for flagging invalid IDs. \n",
+    "\n",
+    "Neither rule was too tricky to implement today, though it took me a bit of thought to come up with the more efficient v2 version of the substring detection for puzzle 2. "
    ]
   }
  ],
