Day 3: battery banks

--- a/solutions/day2.ipynb
+++ b/solutions/day2.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "dbcb3775",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "5049cf59",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "2c0927d5",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,8 @@
    ],
    "source": [
     "validator_new_rule_v2 = IDValidator(input, rule = new_rule_v2)\n",
-    "validator_new_rule_v2.find_invalid_sum()"
+    "validator_new_rule_v2.find_invalid_sum()\n",
+    "# 0.4s vs. 2.0s for v1"
    ]
   },
   {
