Day 4: printing department

--- a/solutions/day3.ipynb
+++ b/solutions/day3.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "3a5d5e63",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,8 @@
     "        shelf = bank_shelf[:] #copy so we can pop non-destructively\n",
     "        digits = ''\n",
     "        while len(digits) < n_digits:\n",
-    "            #if the max is close enough to the end that we'd run out of room by removing everything before it, we don't want it to be the next thing found\n",
+    "            #if the max is close enough to the end that we'd run out of room \n",
+    "            # by removing everything before it, we don't want it to be the next thing found\n",
     "            endpoint = -(n_digits - len(digits) - 1)\n",
     "            if endpoint == 0:\n",
     "                search_space = shelf\n",
@@ -282,7 +283,7 @@
     "\n",
     "Chalk up another success at predicting the axis of generalization for puzzle 2! \n",
     "\n",
-    "Admittedly though, I originally end the whole endpoint/search space logic hard coded for the n=2 case and had to go back to generalize it. Fun little index munging problem! "
+    "Admittedly though, I originally had the whole endpoint/search space logic hard coded for the n=2 case and had to go back to generalize it. Fun little index munging problem! "
    ]
   }
  ],
